Fix overflow issue

--- a/app/script/components/Clock/style.scss
+++ b/app/script/components/Clock/style.scss
@@ -25,11 +25,9 @@
 .time {
   font-size: 72px;
   font-weight: 500;
-  margin-top: 8px;
 }
 
 .date {
   font-size: 48px;
   font-weight: 500;
-  margin-top: 4px;
 }
