--- a/app/script/components/CodeClimate/style.scss
+++ b/app/script/components/CodeClimate/style.scss
@@ -14,6 +14,7 @@
 }
 
 .content {
+  @extend %content;
   // padding: 24px;
 }
 
