--- a/app/script/components/ProductiveTime/style.scss
+++ b/app/script/components/ProductiveTime/style.scss
@@ -14,7 +14,7 @@
 }
 
 .content {
-  padding: 24px;
+  padding: 8px 24px;
 }
 
 .item {
