--- a/app/style/placeholders.scss
+++ b/app/style/placeholders.scss
@@ -6,6 +6,14 @@
   justify-content: space-between;
 
   position: relative;
+  overflow: hidden;
+}
+
+%content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 %footer {
